force-app/main/default/objects/Organization_Referral__c/Organization_Referral__c.object-meta.xml
<CustomObject>
    <label>Organization Referral</label>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Organization Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>