force-app/main/default/objects/Organization_Referral__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Organization Referrals</relationshipLabel>
    <relationshipName>Organization_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>