force-app/main/default/objects/Organization_Referral__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beneficiary Referrals</relationshipLabel>
    <relationshipName>Organization_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>