force-app/main/default/objects/Organization_Referral__c/fields/Trust_Application__c.field-meta.xml
<CustomField>
    <fullName>Trust_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust Application</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Organization Referrals</relationshipLabel>
    <relationshipName>Organization_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>